# fauxmo

./: .dockerignore  .env  .gitignore  .python-version  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  TODO.md  config-sample.json  default.nix  docker-compose.yaml  fauxmo.py  flake.nix  integration_test.nix  module.nix  mypy.ini  protocol_notes.md  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/workflows/: python-package.yml  python-publish.yml
docs/: conf.py  fauxmo.handlers.rst  fauxmo.plugins.rst  fauxmo.rst  index.rst  modules.rst
docs/md/: AUTHORS.md  HISTORY.md  README.md  TODO.md
docs/mdlinks/: AUTHORS.md  CONTRIBUTING.md  HISTORY.md  README.md  TODO.md
extras/: com.n8henrie.fauxmo.plist  fauxmo.service
fauxmo/: __init__.py  cli.py  fauxmo.py  protocols.py  upnp.py  utils.py
fauxmo/handlers/: hass.py  rest.py
fauxmo/plugins/: __init__.py  simplehttphandler.py  simplehttpplugin.py
src/fauxmo/: __init__.py  cli.py  fauxmo.py  protocols.py  upnp.py  utils.py
src/fauxmo/handlers/: hass.py  rest.py
src/fauxmo/plugins/: __init__.py  commandlineplugin.py  homeassistantplugin.py  simplehttpplugin.py
tests/: conftest.py  old-config-sample.json  test_commandlineplugin.py  test_commandlineplugin_config.json  test_config.json  test_config.json.bak  test_fauxmo.py  test_homeassistantplugin.py  test_homeassistantplugin_config.json  test_simplehttpplugin.py  test_simplehttpplugin_config.json
