[metadata]
name = fauxmo
version = attr: fauxmo.__version__
author = Nathan Henrie
author_email = nate@n8henrie.com
license = MIT
license_files = LICENSE
description = Emulated Belkin WeMo devices that work with the Amazon Echo
keywords = fauxmo, alexa, amazon echo
url = https://github.com/n8henrie/fauxmo
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.6

[options.entry_points]
console_scripts = fauxmo=fauxmo.cli:cli

[options.extras_require]
test =
    black==22.1.0
    flake8-docstrings==1.5.0
    flake8-import-order==0.18.1
    flake8==3.8.3
    httpbin==0.7.0
    isort==5.10.1
    mypy==0.950
    pep8-naming==0.11.1
    pylint==2.6.0
    pytest==7.0.1
    requests==2.24.0
    werkzeug==2.0.3
    tox==3.20.0

dev =
    build==0.6.0.post1
    recommonmark==0.6.0
    Sphinx==3.2.1
    sphinx_rtd_theme
    twine==3.2.0
    wheel==0.35.1

[options.packages.find]
where=src
